--- a/ossc.qsf
+++ b/ossc.qsf
@@ -232,4 +232,7 @@ set_global_assignment -name QIP_FILE rtl/pll_2x.qip
 set_global_assignment -name QIP_FILE rtl/pll_3x.qip
 set_global_assignment -name QIP_FILE rtl/pll_3x_lowfreq.qip
 set_global_assignment -name CDF_FILE output_files/Chain1.cdf
+set_global_assignment -name QIP_FILE rtl/linebuf_1k_1p.qip
+set_global_assignment -name QIP_FILE rtl/linebuf_1k.qip
+set_global_assignment -name CDF_FILE output_files/Chain2.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
