--- a/ossc.qsf
+++ b/ossc.qsf
@@ -242,4 +242,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 # end ENTITY(ossc)
 # ----------------
+set_global_assignment -name CDF_FILE ../Desktop/Chain1.cdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
